# android-native-tools

./: .gitignore  .gitmodules  .lgtm.yml  1cs-pipeline.yml  README.md  build-binutils.sh  build-common.cmd  build-llvm-azure.cmd  build-llvm-mingw.sh  build-llvm.cmd  build-llvm.sh  build-mingw.sh  build-xa-utils-azure.cmd  build-xa-utils.cmd  build-xa-utils.sh  build.cmd  build.sh  common.sh  download-upx.ps1  global.json  package-llvm-mingw.sh  package-xa-toolchain.sh  package.sh  prepare-package.ps1  prepare-release.sh
.config/1espt/: PipelineAutobaseliningConfig.yml
.gdn/: .gdnsuppress
.github/workflows/: ci.yml
build-tools/automation/: azure-pipelines-public.yml  azure-pipelines.yml  sign.proj
build-tools/automation/yaml-templates/: stage-build.yml  stage-package.yml  variables.yml
build-tools/create-packs/: Microsoft.Android.LLVM.proj  signing.targets
patches/: binutils-2.37.diff
scripts/: gas.cmd.in  gas.sh  ld.cmd.in  ld.sh  llvm-objcopy.cmd.in  llvm-objcopy.sh  llvm-strip.cmd.in  llvm-strip.sh  vswhere.cmd
src/: CMakeLists.txt
src-thirdparty/openbsd/: getopt_long.c.txt
src/compat/: err.cc  err.h
src/gas/: CMakeLists.txt  command_line.cc  command_line.hh  constants.hh  exceptions.hh  gas.cc  gas.cmd.in  gas.hh  gas.posix.cc  gas.windows.cc  llvm_mc_runner.cc  llvm_mc_runner.hh  llvm_mc_runner.posix.cc  llvm_mc_runner.windows.cc  llvm_mc_runner_arm32.cc  llvm_mc_runner_arm64.cc  llvm_mc_runner_x64.cc  llvm_mc_runner_x86.cc  main.cc  platform.hh  process.cc  process.hh  process.posix.cc  process.windows.cc
src/gas/scripts/: xatu-make-symlinks.sh.in
src/ld/: CMakeLists.txt  ld.cc  ld.hh  main.cc
src/llvm-strip/: CMakeLists.txt  llvm-strip.cc  llvm-strip.hh  main.cc
src/shared/: app.cc  app.hh  app.posix.cc  app.windows.cc  exceptions.hh  process.cc  process.hh  process.posix.cc  process.windows.cc  scope-guard.hh  shared-constants.hh
